@@ -139,7 +139,8 @@ insertline (unsigned long n, Iptr_type l)
   if (!gapsize)
     line = !linelim
       ? testalloc (sizeof (Iptr_type) * (linelim = gapsize = 1024))
-      : (gap = gapsize = linelim, trealloc (Iptr_type, line, linelim <<= 1));
+      : (gap = gapsize = linelim,
+         testrealloc (line, sizeof (Iptr_type) * (linelim <<= 1)));
   if (n < gap)
     movelines (line + n + gapsize, line + n, gap - n);
   else if (gap < n)
